# jimmy

./: Cargo.toml  Changelog.md  LICENSE  README.md
examples/: bootloader_efistub.yaml  invalid--no_hostname.yaml  invalid--no_mount_point.yaml  invalid--relative_mount_path.yaml  invalid--zoneinfo_invalid.yaml  multiple_disks.yaml  multiple_partitions.yaml  no_hostname_error.yaml  no_mount_specified_warning.yaml  simple.yaml  swap_partition.yaml  valid--bootloader_efistub.yaml  valid--multiple_disks.yaml  valid--multiple_partitions.yaml  valid--simple.yaml  valid--swap_partition.yaml  valid--users.yaml  valid--zoneinfo_iceland.yaml
src/: data.rs  install.rs  main.rs
