[package]
name = "jimmy"
version = "0.0.0"
edition = "2021"
authors = [ "xylous <xylous.e@gmail.com>" ]
description = "Arch Linux installer... with YAML files"
keywords = [ "arch", "linux", "installer" ]
categories = [ "command-line-utilities" ]
license = "MIT"
repository = "https://github.com/xylous/jimmy"
readme = true

[dependencies]
