[package]
name = "jimmy"
version = "0.6.0"
edition = "2021"
authors = [ "xylous <xylous.e@gmail.com>" ]
description = "Arch Linux installer... with YAML files"
keywords = [ "arch", "linux", "installer" ]
categories = [ "command-line-utilities" ]
license = "MIT"
repository = "https://github.com/xylous/jimmy"
readme = true

[dependencies]
clap = { version = "3.0.0" }
serde = { version = "1.0.133", features = [ "derive" ] }
serde_yaml = { version = "0.8.23" }
regex = { version = "1.5.4" }
